--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ yarn_mappings=1.21+build.9
 loader_version=0.16.14
 loom_version=1.11-SNAPSHOT
 
+
 # Mod Properties
 mod_version=1.0.0
 maven_group=net.hockeyfan17.cryoclient
@@ -16,3 +17,5 @@ archives_base_name=cryoclient
 
 # Dependencies
 fabric_version=0.102.0+1.21
+cloth_config_version=7.0.65
+modmenu_version=11.0.0
